[package]
name = "queryer-node"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
neon = "1"
once_cell = "1"
queryer = { path = "../queryer" }              # 引入 queryer
tokio = { version = "1", features = ["full"] }
